eventcore-macros/tests/ui/missing_stream_attribute.stderr
error: EventCore: #[derive(Command)] requires at least one #[stream] StreamId field; add #[stream] to your StreamId member
 --> tests/ui/missing_stream_attribute.rs:6:8
  |
6 | struct MissingStreamAttribute {
  |        ^^^^^^^^^^^^^^^^^^^^^^
